[workspace]
members = [
    "address",
    "api",
    "block",
    "blockchain",
    "control",
    "db",
    "encryption",
    "fork",
    "key",
    "key-store",
    "multiaddr",
    "p2p",
    "tofuri",
    "stake",
    "sync",
    "transaction",
    "tree",
    "vanity",
    "wallet",
]

[workspace.dependencies]
address = { path = "address" }
api = { path = "api" }
block = { path = "block" }
blockchain = { path = "blockchain" }
control = { path = "control" }
db = { path = "db" }
encryption = { path = "encryption" }
fork = { path = "fork" }
key = { path = "key" }
key-store = { path = "key-store" }
multiaddr = { path = "multiaddr" }
p2p = { path = "p2p" }
tofuri = { path = "tofuri" }
stake = { path = "stake" }
sync = { path = "sync" }
transaction = { path = "transaction" }
tree = { path = "tree" }
vanity = { path = "vanity" }
wallet = { path = "wallet" }
vint = { git = "https://github.com/zudo/vint" }
decimal = { git = "https://github.com/zudo/decimal" }
