[package]
name = "pea-address"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "エンドウ"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/peacash/pea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-core = { version = "0.1.1", path = "../core" }
hex = "0.4.3"