[package]
name = "pea-address"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-core = { version = "0.4.0", path = "../core" }
hex = "0.4.3"
blake3 = "1.3.3"