[package]
name = "pea-amount"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-core = { version = "0.2.0", path = "../core" }