[package]
name = "tofuri-api-internal"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri internal API"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-core = { version = "0.1", path = "../core" }
tofuri-api-internal-core = { version = "0.1", path = "../api-internal-core" }
tofuri-block = { version = "0.1", path = "../block" }
tofuri-blockchain-sync = { version = "0.1", path = "../blockchain-sync" }
tofuri-transaction = { version = "0.1", path = "../transaction" }
tofuri-stake = { version = "0.1", path = "../stake" }
tokio = { version = "1.24", features = ["full"] }
bincode = "1.3"
multiaddr = "0.17"