[package]
name = "tofuri-api-util"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri API utilities"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-address = { version = "0.1", path = "../address" }
tofuri-api-core = { version = "0.1", path = "../api-core" }
tofuri-block = { version = "0.1", path = "../block" }
tofuri-int = { version = "0.1", path = "../int" }
tofuri-stake = { version = "0.1", path = "../stake" }
tofuri-transaction = { version = "0.1", path = "../transaction" }
hex = "0.4"
