[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
address = { workspace = true }
block = { workspace = true }
key = { workspace = true }
vint = { workspace = true }
decimal = { workspace = true }
stake = { workspace = true }
transaction = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
hex = "0.4.3"
