[package]
name = "tofuri-block"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri block"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-key = { version = "0.1.0", path = "../key", features = ["vrf"] }
tofuri-stake = { version = "0.1.0", path = "../stake" }
tofuri-transaction = { version = "0.1.0", path = "../transaction" }
tofuri-address = { version = "0.1.0", path = "../address" }
vint = { path = "../vint" }
parseint = { path = "../parseint" }
serde = { version = "1.0.163", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.6"
merkle-cbt = "0.3.2"
hex = "0.4.3"
