[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key = { version = "0.1.0", path = "../key", features = ["vrf"] }
stake = { version = "0.1.0", path = "../stake" }
transaction = { version = "0.1.0", path = "../transaction" }
address = { version = "0.1.0", path = "../address" }
vint = { git = "https://github.com/zudo/vint" }
decimal = { git = "https://github.com/zudo/decimal" }
serde = { version = "1.0.163", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.6"
merkle-cbt = "0.3.2"
hex = "0.4.3"

[dev-dependencies]
bincode = "1.3.3"
