[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key = { path = "../key", features = ["vrf"] }
stake = { workspace = true }
transaction = { workspace = true }
vint = { git = "https://github.com/zudo/vint" }
serde = { version = "1.0.163", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.6"
merkle-cbt = "0.3.2"

[dev-dependencies]
bincode = "1.3.3"
