[package]
name = "tofuri-blockchain-sync"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri blockchain sync"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-core = { version = "0.1", path = "../core" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }