[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
address = { path = "../address" }
vint = { git = "https://github.com/zudo/vint" }
decimal = { git = "https://github.com/zudo/decimal" }
block = { path = "../block" }
db = { path = "../db" }
key = { path = "../key" }
stake = { path = "../stake" }
transaction = { path = "../transaction" }
rocksdb = "0.21.0"
colored = "2.0.0"
tracing = "0.1.37"
hex = "0.4.3"
serde = "1.0.163"
lazy_static = "1.4.0"
bincode = "1.3.3"
chrono = "0.4.26"
uint = "0.9.5"
sha2 = "0.10.6"
