[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = "1.29.0"
tower-http = { version = "0.4.1", features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
