[package]
name = "pea-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/peacash/pea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
merkle-cbt = "0.3.2"
ed25519 = "1.5.2"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
serde = { version = "1.0.137", features = ["derive"] }
serde-big-array = "0.4.1"
hex = "0.4.3"
bincode = "1.3.3"