[package]
name = "pea-core"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
merkle-cbt = "0.3.2"
serde = { version = "1.0.137", features = ["derive"] }
serde-big-array = "0.4.1"
hex = "0.4.3"
bincode = "1.3.3"
chrono = "0.4.23"