[package]
name = "pea-core"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle-cbt = "0.3.2"
serde = { version = "1.0.137", features = ["derive"] }
serde-big-array = "0.4.1"
hex = "0.4.3"
bincode = "1.3.3"
chrono = "0.4.23"
sha2 = "0.10.6"
uint = "0.9.5"