[package]
name = "tofuri-db"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri database"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
vint = { git = "https://github.com/zudo/vint" }
decimal = { git = "https://github.com/zudo/decimal" }
tofuri-block = { version = "0.1.0", path = "../block" }
tofuri-stake = { version = "0.1.0", path = "../stake" }
tofuri-transaction = { version = "0.1.0", path = "../transaction" }
rocksdb = "0.21.0"
bincode = "1.3.3"
tracing = "0.1.37"
serde = "1.0.164"
serde-big-array = "0.5.1"
hex = "0.4.3"
