[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vint = { workspace = true }
block = { workspace = true }
stake = { workspace = true }
transaction = { workspace = true }
tree = { workspace = true }
rocksdb = "0.21.0"
bincode = "1.3.3"
tracing = "0.1.37"
serde = "1.0.164"
serde-big-array = "0.5.1"
hex = "0.4.3"
