[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
argon2 = "0.5.0"
lazy_static = "1.4.0"
rand_core = "0.6.4"

[dev-dependencies]
rand = "0.8.5"
