[package]
name = "tofuri-fork"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri fork"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-address = { version = "0.1.1", path = "../address" }
vint = { path = "../vint" }
decimal = { path = "../decimal" }
tofuri-block = { version = "0.1.0", path = "../block" }
tofuri-checkpoint = { version = "0.1.0", path = "../checkpoint" }
tofuri-db = { version = "0.1.0", path = "../db" }
tofuri-stake = { version = "0.1.0", path = "../stake" }
tofuri-transaction = { version = "0.1.0", path = "../transaction" }
tofuri-tree = { version = "0.1.0", path = "../tree" }
tofuri-util = { version = "0.1.0", path = "../util" }
rocksdb = "0.21.0"
tracing = "0.1.37"
serde = "1.0.163"
uint = "0.9.5"
sha2 = "0.10.6"
