[package]
name = "pea-int"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-core = { version = "0.5.0", path = "../core" }