[package]
name = "key-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encryption = { path = "../encryption" }
key = { path = "../key" }
hex = "0.4.3"
lazy_static = "1.4.0"
rand_core = "0.6.4"
