[package]
name = "pea-key"
version = "0.6.4"
edition = "2021"
license = "GPL-3.0"
description = "Peacash key"
repository = "https://github.com/peacash/peacash"

[dependencies]
pea-core = { version = "0.6", path = "../core" }
secp256k1 = { version = "0.25", features = ["rand-std","recovery","global-context"] }
vrf = { version = "0.2", optional = true }
rand = "0.8"
sha2 = "0.10"

[features]
vrf = ["dep:vrf"]