[package]
name = "key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.27.0", features = [
    "rand-std",
    "recovery",
    "global-context",
] }
vrf = { version = "0.2.4", optional = true }
rand = "0.8.5"
sha2 = "0.10.6"

[features]
vrf = ["dep:vrf"]
