[package]
name = "pea-node"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "エンドウ"
readme = "crate.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/peacash/pea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-address = { version = "0.1.1", path = "../address" }
pea-amount = { version = "0.1.1", path = "../amount" }
pea-api = { version = "0.1.1", path = "../api" }
pea-core = { version = "0.1.1", path = "../core" }
pea-db = { version = "0.2.0", path = "../db" }
pea-tree = { version = "0.1.1", path = "../tree" }
pea-wallet = { version = "0.2.2", path = "../wallet" }
rocksdb = "0.19.0"
libp2p = { version = "0.45.1", features = ["tcp-tokio"] }
colored = "2.0.0"
bincode = "1.3.3"
log = "0.4.17"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
env_logger = "0.9.0"
chrono = "0.4.19"
tempdir = "0.3.7"
clap = { version = "3.2.6", features = ["derive"] }