[package]
name = "tofuri-p2p"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri P2P"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-core = { version = "0.1.2", path = "../core" }
tofuri-util = { version = "0.1.0", path = "../util" }
libp2p = { version = "0.51.3", features = [
    "yamux",
    "noise",
    "tcp",
    "request-response",
    "autonat",
    "macros",
    "identify",
    "mdns",
    "gossipsub",
    "tokio",
] }
tokio = "1.28.1"
async-trait = "0.1.68"
futures = "0.3.28"
tracing = "0.1.37"
serde = "1.0.163"
