[package]
name = "tofuri-p2p"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri P2P"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
libp2p = { version = "0.51.3", features = [
    "yamux",
    "noise",
    "tcp",
    "request-response",
    "autonat",
    "macros",
    "identify",
    "mdns",
    "gossipsub",
    "tokio",
] }
tokio = "1.28.1"
async-trait = "0.1.68"
futures = "0.3.28"
tracing = "0.1.37"
serde = "1.0.163"
void = "1.0.2"
chrono = "0.4.26"
