[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
serde = { version = "1.0.163", features = ["derive"] }
void = "1.0.2"
tokio = { version = "1.28.1", features = ["full"] }
sha2 = "0.10.6"
rand = "0.8.5"
chrono = "0.4.24"
libp2p = { version = "0.51.3", features = [
    "yamux",
    "noise",
    "tcp",
    "request-response",
    "autonat",
    "macros",
    "identify",
    "mdns",
    "gossipsub",
    "tokio",
] }
async-trait = "0.1.68"
futures = "0.3.28"
