[package]
name = "pea-pay-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-core = { version = "0.3.0", path = "../core" }
pea-key = { version = "0.2.2", path = "../key" }
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"