[package]
name = "pea-pay-core"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Peacash Pay core"
repository = "https://github.com/peacash/peacash"

[dependencies]
pea-address = { version = "0.6", path = "../address" }
pea-core = { version = "0.6", path = "../core" }
pea-key = { version = "0.6", path = "../key" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"