[package]
name = "pea-pay-db"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "エンドウ"
repository = "https://github.com/peacash/peacash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pea-key = { version = "0.3.0", path = "../key" }
pea-pay-core = { version = "0.1.1", path = "../pay-core" }
rocksdb = "0.19.0"
bincode = "1.3.3"