[package]
name = "pea-pay-db"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Peacash Pay database"
repository = "https://github.com/peacash/peacash"

[dependencies]
pea-key = { version = "0.6", path = "../key" }
pea-pay-core = { version = "0.1", path = "../pay-core" }
rocksdb = "0.19"
bincode = "1.3"