[package]
name = "tofuri-pay-db"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri Pay database"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-key = { version = "0.1", path = "../key" }
tofuri-pay-core = { version = "0.1", path = "../pay-core" }
rocksdb = "0.19"
bincode = "1.3"