[package]
name = "tofuri-pay"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri Pay"
readme = "crate.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-address = { version = "0.1.0", path = "../address" }
tofuri-int = { version = "0.1.0", path = "../int" }
tofuri-core = { version = "0.1.0", path = "../core" }
tofuri-api-core = { version = "0.1.0", path = "../api-core" }
tofuri-pay-core = { version = "0.1.0", path = "../pay-core" }
tofuri-pay-db = { version = "0.1.0", path = "../pay-db" }
tofuri-key = { version = "0.1.0", path = "../key" }
tofuri-transaction = { version = "0.1.0", path = "../transaction" }
tofuri-util = { version = "0.1.0", path = "../util" }
hex = "0.4.3"
clap = { version = "4.2.7", features = ["derive", "env"] }
lazy_static = "1.4.0"
regex = "1.8.1"
tracing = "0.1.37"
serde_json = "1.0.96"
bincode = "1.3.3"
reqwest = { version = "0.11.18", features = ["json"] }
rocksdb = "0.21.0"
tempdir = "0.3.7"
chrono = "0.4.24"
tokio = { version = "1.23", features = ["full"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
