[package]
name = "pay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
address = { version = "0.1.0", path = "../address" }
vint = { git = "https://github.com/zudo/vint" }
decimal = { git = "https://github.com/zudo/decimal" }
api = { version = "0.1.0", path = "../api" }
key = { version = "0.1.0", path = "../key" }
transaction = { version = "0.1.0", path = "../transaction" }
hex = "0.4.3"
clap = { version = "4.2.7", features = ["derive", "env"] }
lazy_static = "1.4.0"
regex = "1.8.1"
tracing = "0.1.37"
serde_json = "1.0.96"
bincode = "1.3.3"
reqwest = { version = "0.11.18", features = ["json"] }
rocksdb = "0.21.0"
tempdir = "0.3.7"
chrono = "0.4.24"
tokio = { version = "1.28.1", features = ["full"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.6"
