[package]
name = "pea"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
readme = "crate.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/peacash/peacash"

[dependencies]
pea-address = { path = "../address" }
pea-api = { path = "../api" }
pea-int = { path = "../int" }
pea-block = { path = "../block" }
pea-core = { path = "../core" }
pea-db = { path = "../db" }
pea-logger = { path = "../logger" }
pea-key = { path = "../key" }
pea-stake = { path = "../stake" }
pea-transaction = { path = "../transaction" }
pea-tree = { path = "../tree" }
pea-wallet = { path = "../wallet" }
rocksdb = "0.19.0"
colored = "2.0.0"
bincode = "1.3.3"
log = "0.4.17"
hex = "0.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tempdir = "0.3.7"
clap = { version = "3.2.6", features = ["derive"] }
futures = "0.3.25"
void = "1.0.2"
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["full"] }
libp2p = { version = "0.50.0", features = ["autonat","noise","macros","identify","mplex","mdns","ping","gossipsub","tcp","tokio"] }
sha2 = "0.10.6"
uint = "0.9.5"