[package]
name = "pea"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "エンドウ"
readme = "crate.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/peacash/peacash"

[dependencies]
pea-address = { version = "0.6", path = "../address" }
pea-api = { version = "0.6", path = "../api" }
pea-int = { version = "0.4", path = "../int" }
pea-block = { version = "0.6", path = "../block" }
pea-core = { version = "0.6", path = "../core" }
pea-db = { version = "0.7", path = "../db" }
pea-logger = { version = "0.1", path = "../logger" }
pea-key = { version = "0.6", path = "../key" }
pea-stake = { version = "0.7", path = "../stake" }
pea-transaction = { version = "0.8", path = "../transaction" }
pea-tree = { version = "0.4", path = "../tree" }
pea-wallet = { version = "0.6", path = "../wallet" }
rocksdb = "0.19"
colored = "2.0"
bincode = "1.3"
log = "0.4"
hex = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
void = "1.0"
chrono = "0.4"
tokio = { version = "1.24", features = ["full"] }
libp2p = { version = "0.50", features = ["autonat","noise","macros","identify","mplex","mdns","ping","gossipsub","tcp","tokio"] }
sha2 = "0.10"
uint = "0.9"