[package]
name = "pea"
version = "0.9.2"
edition = "2021"
license = "GPL-3.0"
description = "Peacash"
readme = "crate.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/peacash/peacash"

[dependencies]
pea-address = { version = "0.6", path = "../address" }
pea-api-internal-core = { version = "0.1", path = "../api-internal-core" }
pea-int = { version = "0.4", path = "../int" }
pea-block = { version = "0.6", path = "../block" }
pea-blockchain = { version = "0.1", path = "../blockchain" }
pea-core = { version = "0.6", path = "../core" }
pea-db = { version = "0.7", path = "../db" }
pea-logger = { version = "0.1", path = "../logger" }
pea-p2p = { version = "0.1", path = "../p2p" }
pea-key = { version = "0.6", path = "../key" }
pea-stake = { version = "0.7", path = "../stake" }
pea-transaction = { version = "0.8", path = "../transaction" }
pea-tree = { version = "0.4", path = "../tree" }
pea-util = { version = "0.1", path = "../util" }
pea-wallet = { version = "0.6", path = "../wallet" }
rocksdb = "0.19"
colored = "2.0"
bincode = "1.3"
log = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
clap = { version = "3.2", features = ["derive"] }
void = "1.0"
tokio = { version = "1.24", features = ["full"] }
libp2p = { version = "0.50", features = ["noise","mplex","tcp"] }
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"