[package]
name = "tofuri-rpc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri RPC"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-core = { version = "0.1", path = "../core" }
tofuri-rpc-core = { version = "0.1", path = "../rpc-core" }
tofuri-block = { version = "0.1", path = "../block" }
tofuri-sync = { version = "0.1", path = "../sync" }
tofuri-transaction = { version = "0.1", path = "../transaction" }
tofuri-stake = { version = "0.1", path = "../stake" }
tokio = { version = "1.24", features = ["full"] }
bincode = "1.3"
multiaddr = "0.17"