[package]
name = "tofuri-rpc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri RPC"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-block = { version = "0.1.0", path = "../block" }
tofuri-transaction = { version = "0.1.0", path = "../transaction" }
tofuri-stake = { version = "0.1.0", path = "../stake" }
tofuri-blockchain = { version = "0.1.0", path = "../blockchain" }
tokio = { version = "1.28.1", features = ["full"] }
bincode = "1.3.3"
serde = "1.0.164"
