[package]
name = "tofuri-stake"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri stake"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
tofuri-int = { version = "0.1", path = "../int" }
tofuri-core = { version = "0.1", path = "../core" }
tofuri-key = { version = "0.1", path = "../key" }
tofuri-address = { version = "0.1", path = "../address" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"
sha2 = "0.10"
hex = "0.4"