[package]
name = "tofuri-stake"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri stake"
repository = "https://github.com/tofuri/tofuri"

[dependencies]
vint = { path = "../vint" }
parseint = { path = "../parseint" }
tofuri-key = { version = "0.1.0", path = "../key" }
tofuri-address = { version = "0.1.1", path = "../address" }
serde = { version = "1.0.163", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
bincode = "1.3.3"
