[package]
name = "stake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vint = { workspace = true }
key = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde-big-array = "0.5.1"
sha2 = "0.10.6"

[dev-dependencies]
bincode = "1.3.3"
